--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<!Doctype html>
-<html>
-<body>This is body</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <h1>this is my git file</h1>
+</body>
 </html>
